--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ local_folder
 local_folder/
 nachos/nachos-3.4/code/*
 nachos/nachos-3.4/code/*/
+!nachos/nachos-3.4/code/threads/system.cc
+!nachos/nachos-3.4/code/threads/system.h
 !nachos/nachos-3.4/code/test/
 !nachos/nachos-3.4/code/test
 !nachos/nachos-3.4/code/userprog/
