--- a/.gitignore
+++ b/.gitignore
@@ -52,13 +52,13 @@ Mkfile.old
 dkms.conf
 local_folder
 local_folder/
-nachos/nachos-3.4/code/*/
 
 
 
-!nachos/nachos-3.4/code/threads/system.cc
-!nachos/nachos-3.4/code/threads/system.h
+!./nachos/nachos-3.4/code/*/system.cc
+!./nachos/nachos-3.4/code/*/system.h
 !nachos/nachos-3.4/code/test/
 !nachos/nachos-3.4/code/test
 !nachos/nachos-3.4/code/userprog/
 !nachos/nachos-3.4/code/userprog
+nachos/nachos-3.4/code/*/
